--- a/animatediff-batcher.cfg.sample
+++ b/animatediff-batcher.cfg.sample
@@ -1,8 +1,14 @@
 # Path to your automatic1111 local install
 auto1111_folder="/myfolder/stable-diffusion-webui"
 
-# Path to animatediff movies to be processed (should contains .txt and .gif animations)
+# Path to movies to be processed (should contains .txt and .gif animations)
 animatediff_input_folder="/myfolder/Videos/AnimateDiff_Projects"
+
+# Auto1111 loading timeout (needed to init auto1111 before computing an animation, tune it accordingly to your hardware)
+auto1111_timeout=10
+
+# Denoise strength used by the HiresFix pass
+hires_denoise=0.35
 
 # Upscale x4 using Real-ESRGAN
 real_esrgan_command="/myfolder/realesrgan-ncnn-vulkan-v0.2.0-ubuntu/realesrgan-ncnn-vulkan"
@@ -15,7 +21,7 @@ real_esrgan_model=4x-UltraSharp-opt-fp16
 
 # Frame Interpolation using Rife
 interpol_command="/myfolder/rife-ncnn-vulkan-20221029-ubuntu/rife-ncnn-vulkan"
-interpol_model="rife-v4"
+interpol_model="rife-v4.6"
 interpol_folder="rife"
 
 # ffmpeg final clip settings
